WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104438
Visual order of empty value placeholder in INPUT_MULTIPLE_FIELDS_UI is wrong in RTL
https://bugs.webkit.org/show_bug.cgi?id=104438
Summary
Visual order of empty value placeholder in INPUT_MULTIPLE_FIELDS_UI is wrong ...
Kent Tamura
Reported
2012-12-08 06:02:32 PST
Direction of empty value placeholder in INPUT_MULTIPLE_FIELDS_UI is wrong in RTL This is follow-up of
Bug 103869
.
Attachments
Patch
(113.26 KB, patch)
2012-12-09 21:19 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 2
(120.40 KB, patch)
2012-12-10 01:16 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-12-09 21:19:37 PST
Created
attachment 178467
[details]
Patch
Kent Tamura
Comment 2
2012-12-10 01:16:05 PST
Created
attachment 178485
[details]
Patch 2 Adjust tests
WebKit Review Bot
Comment 3
2012-12-10 07:15:17 PST
Comment on
attachment 178485
[details]
Patch 2 Clearing flags on attachment: 178485 Committed
r137152
: <
http://trac.webkit.org/changeset/137152
>
WebKit Review Bot
Comment 4
2012-12-10 07:15:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug