Visual order of empty value placeholder in INPUT_MULTIPLE_FIELDS_UI is wrong in RTL https://bugs.webkit.org/show_bug.cgi?id=104438

Reviewed by Hajime Morita.

Source/WebCore:

No new tests. This updates datetimelocal-appearance-l10n.html for he-il
and ar-eg locales.

* html/shadow/DateTimeNumericFieldElement.cpp:
(WebCore::DateTimeNumericFieldElement::DateTimeNumericFieldElement):
We should not append Right-to-left-mark to each of placeholder
strings. It makes numeric field separators such as ':' and '/' RTL, and
makes a wrong visual order. We use unicode-bidi:bidi-override and
direction:ltr instead. It means we force LTR only to this element
* html/shadow/DateTimeNumericFieldElement.h:
Makes m_placeholder const again.
* html/shadow/DateTimeEditElement.cpp:
(WebCore::DateTimeEditBuilder::visitLiteral):
Explicitly set right-to-left-mark before S, WS, ON types according to
Unicod Bidirectional Algorithm Table 4 [1]. This is needed because we
don't have context like "This literal follows European/Arabic numbers"
in a case of showing placeholders.
[1] http://www.unicode.org/reports/tr9/#Bidirectional_Character_Types

LayoutTests:

* platform/chromium-mac/fast/forms/datetimelocal/datetimelocal-appearance-l10n-expected.png:
* platform/chromium/TestExpectations:
Update bug numbers and add time-multiple-fields-localization.html.
* fast/forms/date-multiple-fields/date-multiple-fields-keyboard-events.html:
Adjust test scenario for the new behavior.
* fast/forms/datetimelocal-multiple-fields/datetimelocal-multiple-fields-keyboard-events.html:
* fast/forms/month-multiple-fields/month-multiple-fields-keyboard-events.html:
* fast/forms/time-multiple-fields/time-multiple-fields-keyboard-events.html:


Canonical link: https://commits.webkit.org/122711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137152 268f45cc-cd09-0410-ab3c-d52691b4dbfc